--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello world.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset=utf-8>
+    <title>Dot Product Technologies, Inc.</title>
+    <style>
+      html, body {
+        height: 100%;
+        width: 100%;
+      }
+      .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: auto;
+      }
+      .logo {
+        margin-bottom: 20px;
+      }
+      </style>
+  </head>
+  <body class="container">
+    <div class="logo">
+      <img width="100px" height="100px" src="static/logo.png" alt="Dot Product Technologies, Inc. Logo">
+    </div>
+    <div>Dot Product Technologies, Inc.</div>
+  </body>
+</html>
